fixed alignment issue in projects page

--- a/client/src/pages/Projects.css
+++ b/client/src/pages/Projects.css
@@ -13,7 +13,7 @@
     display: flex;
     gap: 20px;
     align-items: center;
-    justify-content: center;
+    justify-content: baseline;
 }
 
 .titleDate{
